genre alignment bugfix

--- a/src/SendGiftWizard/sass/fav-drink.scss
+++ b/src/SendGiftWizard/sass/fav-drink.scss
@@ -28,6 +28,7 @@
 
   .paper-content{
     text-align: center;
+    width: 100%;
     margin-top: 10vh;
  
     .os.s1 {
